--- a/package.json
+++ b/package.json
@@ -9,12 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.0",
+    "babel-plugin-styled-components": "^2.0.6",
+    "next": "^12.1.1-canary.10",
+    "next-images": "^1.8.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0"
-  }
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.40",
+    "@types/styled-components": "^5.1.24",
+    "babel-plugin-inline-react-svg": "^2.0.1",
+    "eslint": "^8.10.0",
+    "eslint-config-airbnb-typescript": "^16.1.1",
+    "eslint-config-next": "12.1.0",
+    "typescript": "^4.6.2"
+  },
+  "main": "index.tsx",
+  "author": "Argério Queiroz da Silva Filho <argerioaf@gmail.com>",
+  "license": "MIT"
 }
