--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-styled-components": "^2.0.6",
     "next": "^12.1.1-canary.10",
     "next-images": "^1.8.4",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.29.0",
@@ -21,6 +22,7 @@
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/cookie": "^0.4.1",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.14",
